--- a/test4.html
+++ b/test4.html
@@ -64,18 +64,11 @@
             display: grid;
             grid-template-columns: 1fr;
             gap: 0;
-            margin-top: 24px;
-            margin-left: 20px;
-            margin-right: 20px;
-            align-items: stretch;
         }
 
         @media (min-width: 1024px) {
             .main-layout {
                 grid-template-columns: 1fr 320px;
-                margin-left: 40px;
-                margin-right: 40px;
-                align-items: stretch;
             }
         }
 
@@ -126,16 +119,12 @@
             background: white;
             border-top: 1px solid rgb(229 231 235);
             padding: 16px;
-            height: 100%;
-            min-height: 100%;
         }
 
         @media (min-width: 1024px) {
             .sidebar {
                 border-top: none;
                 border-left: 1px solid rgb(229 231 235);
-                height: 100%;
-                min-height: 100%;
             }
         }
 
@@ -218,7 +207,7 @@
 
     <div class="main-layout">
         <!-- Main Content -->
-        <div class="p-4 h-full">
+        <div class="p-4">
             <!-- Service Cards Grid -->
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
                 <!-- National Emergency -->
@@ -228,7 +217,7 @@
                             <i class="fas fa-exclamation-triangle text-red-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn"
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
                             data-service="জাতীয় জরুরি সেবা"></i>
                     </div>
                     <div>
@@ -259,7 +248,8 @@
                             <i class="fas fa-shield-alt text-blue-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn" data-service="পুলিশ"></i>
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
+                            data-service="পুলিশ"></i>
                     </div>
                     <div>
                         <h3 class="font-bold text-gray-800">পুলিশ</h3>
@@ -289,7 +279,7 @@
                             <i class="fas fa-fire text-red-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn"
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
                             data-service="ফায়ার সার্ভিস"></i>
                     </div>
                     <div>
@@ -320,7 +310,8 @@
                             <i class="fas fa-ambulance text-green-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn" data-service="অ্যাম্বুলেন্স"></i>
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
+                            data-service="অ্যাম্বুলেন্স"></i>
                     </div>
                     <div>
                         <h3 class="font-bold text-gray-800">অ্যাম্বুলেন্স</h3>
@@ -350,7 +341,7 @@
                             <i class="fas fa-female text-pink-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn"
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
                             data-service="নারী ও শিশু সহায়তা"></i>
                     </div>
                     <div>
@@ -381,7 +372,8 @@
                             <i class="fas fa-balance-scale text-red-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn" data-service="দুদক"></i>
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
+                            data-service="দুদক"></i>
                     </div>
                     <div>
                         <h3 class="font-bold text-gray-800">দুদক</h3>
@@ -411,7 +403,7 @@
                             <i class="fas fa-bolt text-red-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn"
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
                             data-service="বিদ্যুৎ রিপোর্ট"></i>
                     </div>
                     <div>
@@ -442,7 +434,8 @@
                             <i class="fas fa-hands-helping text-red-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn" data-service="ব্রাক"></i>
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
+                            data-service="ব্রাক"></i>
                     </div>
                     <div>
                         <h3 class="font-bold text-gray-800">ব্রাক</h3>
@@ -472,7 +465,7 @@
                             <i class="fas fa-train text-red-500"></i>
                         </div>
                         <div></div>
-                        <i class="far fa-heart text-gray-400 cursor-pointer heart-btn"
+                        <i class="far fa-heart text-gray-400 hover:text-red-500 cursor-pointer heart-btn transition-colors"
                             data-service="বাংলাদেশ রেলওয়ে"></i>
                     </div>
                     <div>
@@ -569,11 +562,24 @@
         }
 
         document.addEventListener('DOMContentLoaded', function () {
-            // Handle heart button clicks - Updated functionality
+            // Handle heart button clicks
             document.querySelectorAll('.heart-btn').forEach(heart => {
                 heart.addEventListener('click', function () {
-                    // Only increase heart count, don't change visual state
-                    heartCount++;
+                    const service = this.getAttribute('data-service');
+
+                    // Toggle heart visual state
+                    this.classList.toggle('far');
+                    this.classList.toggle('fas');
+                    this.classList.toggle('text-gray-400');
+                    this.classList.toggle('text-red-500');
+
+                    // Increase heart count
+                    if (this.classList.contains('fas')) {
+                        heartCount++;
+                    } else {
+                        heartCount = Math.max(0, heartCount - 1);
+                    }
+
                     updateCounters();
                 });
             });
