--- a/test5.html
+++ b/test5.html
@@ -67,7 +67,8 @@
             margin-top: 24px;
             margin-left: 20px;
             margin-right: 20px;
-            align-items: stretch;
+            align-items: start;
+            min-height: calc(100vh - 200px);
         }
 
         @media (min-width: 1024px) {
@@ -75,7 +76,8 @@
                 grid-template-columns: 1fr 320px;
                 margin-left: 40px;
                 margin-right: 40px;
-                align-items: stretch;
+                align-items: start;
+                min-height: calc(100vh - 200px);
             }
         }
 
@@ -126,16 +128,16 @@
             background: white;
             border-top: 1px solid rgb(229 231 235);
             padding: 16px;
+            min-height: calc(100vh - 200px);
             height: 100%;
-            min-height: 100%;
         }
 
         @media (min-width: 1024px) {
             .sidebar {
                 border-top: none;
                 border-left: 1px solid rgb(229 231 235);
+                min-height: calc(100vh - 200px);
                 height: 100%;
-                min-height: 100%;
             }
         }
 
@@ -159,12 +161,20 @@
             grid-template-columns: 1fr auto;
             align-items: center;
             justify-content: space-between;
-            padding: 8px 0;
-            border-bottom: 1px solid rgb(243 244 246);
+            padding: 12px;
+            margin-bottom: 8px;
+            background: #f8fafc;
+            border-radius: 8px;
+            border: 1px solid rgb(243 244 246);
+            transition: background-color 0.2s;
+        }
+
+        .history-item:hover {
+            background: #f1f5f9;
         }
 
         .history-item:last-child {
-            border-bottom: none;
+            margin-bottom: 0;
         }
 
         .bottom-stats {
@@ -176,6 +186,34 @@
             border-top: 1px solid rgb(229 231 235);
             font-size: 14px;
             color: rgb(75 85 99);
+        }
+
+        .call-history-container {
+            min-height: calc(100vh - 300px);
+            overflow-y: auto;
+            padding: 4px 0;
+        }
+
+        .clear-btn {
+            background: #f3f4f6;
+            color: #374151;
+            padding: 8px 12px;
+            border-radius: 8px;
+            font-size: 14px;
+            font-weight: 500;
+            border: 1px solid #d1d5db;
+            transition: all 0.2s ease;
+            cursor: pointer;
+        }
+
+        .clear-btn:hover {
+            background: #e5e7eb;
+            border-color: #9ca3af;
+        }
+
+        .clear-btn:active {
+            background: #d1d5db;
+            transform: translateY(1px);
         }
     </style>
 </head>
@@ -200,7 +238,7 @@
                 <i class="fas fa-coins"></i>
             </div>
             <div class="stat-item copy-stat">
-                <span id="copyCount">2</span>
+                <span id="copyCount">0</span>
                 <span>Copy</span>
             </div>
         </div>
@@ -218,7 +256,7 @@
 
     <div class="main-layout">
         <!-- Main Content -->
-        <div class="p-4 h-full">
+        <div class="p-4 min-h-full">
             <!-- Service Cards Grid -->
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
                 <!-- National Emergency -->
@@ -506,13 +544,12 @@
                     <span class="font-medium text-gray-800">Call History</span>
                 </div>
                 <div></div>
-                <button class="bg-red-500 text-white px-3 py-1 rounded text-sm font-medium hover:bg-red-600"
-                    id="clearHistoryBtn">
-                    <i class="fas fa-trash mr-1"></i> Clear
+                <button class="clear-btn" id="clearHistoryBtn">
+                    <i class="fas fa-trash-alt mr-1"></i> Clear
                 </button>
             </div>
             <!-- Call history will be populated here dynamically -->
-            <div id="callHistoryList" class="space-y-3">
+            <div id="callHistoryList" class="call-history-container">
                 <div class="text-center text-gray-500 py-8" id="emptyHistoryMessage">
 
                 </div>
@@ -524,7 +561,7 @@
         // Initialize counters
         let heartCount = 0;
         let coinCount = 100;
-        let copyCount = 2;
+        let copyCount = 0;
         let callHistory = [];
 
         // Update counter displays
